--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		</p>
 
 		<p>
-			<a href="mailto:contact@distantlantern.com?Subject=Hello!"><h2>contact</h2></a><br>
-			<a href="www.twitter.com/distantlantern"><h2>twitter</h2></a>
+			<a href="mailto:contact@distantlantern.com?Subject=Hello!"><h2>contact</h2></a> <br>
+			<a href="https://www.twitter.com/distantlantern/"><h2>twitter</h2></a>
 		</p>
 
 </div>
